cabal-version: 2.4

name: fencer
version: 1.0.0
synopsis: Port of lyft/ratelimit
description:
  Haskell port of <https://github.com/lyft/ratelimit lyft/ratelimit>.

license: BSD-3-Clause
license-file: LICENSE

author: Artyom Kazak
maintainer: artyom@monadfix.com
extra-source-files: CHANGELOG.md

homepage: http://github.com/juspay/fencer
bug-reports: http://github.com/juspay/fencer/issues

source-repository head
  type: git
  location: git://github.com/juspay/fencer.git

common common
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    ScopedTypeVariables
    LambdaCase
    DeriveGeneric
    DerivingStrategies
    NamedFieldPuns
    ViewPatterns
    TypeOperators
    MultiWayIf
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import:
    common
  exposed-modules:
    Fencer.Main
    Fencer.AppState
    Fencer.Server
    Fencer.Counter
    Fencer.Rules
    Fencer.Watch
    Fencer.Types
    Fencer.Proto
    Fencer.Time
    Fencer.Settings
  build-depends:
    base,
    base-prelude,
    hashable,
    monad-loops,
    time,
    stm,
    vector,
    text,
    containers,
    unordered-containers,
    bytestring,
    transformers,
    deepseq,
    proto3-wire,
    proto3-suite,
    grpc-haskell,
    stm-containers,
    list-t,
    focus,
    named,
    aeson,
    yaml,
    directory,
    filepath,
    fsnotify,
    tinylog
  hs-source-dirs:
    lib

executable fencer
  import:
    common
  main-is:
    Main.hs
  build-depends:
    base,
    fencer
  hs-source-dirs:
    src
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

test-suite test-fencer
  import:
    common
  type:
    exitcode-stdio-1.0
  main-is:
    Tests.hs
  hs-source-dirs:
    test
  other-modules:
    Fencer.Types.Test
  default-language:
    Haskell2010
  build-depends:
    , aeson
    , aeson-qq
    , base
    , base-prelude
    , tasty
    , tasty-discover
    , tasty-hunit
    , text
    , unordered-containers
    , vector
    -- Internal dependencies
    , fencer
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
