cabal-version: 2.4

name: fencer
version: 1.0.0
synopsis: Port of lyft/ratelimit
description:
  Haskell port of <https://github.com/lyft/ratelimit lyft/ratelimit>.

license: BSD-3-Clause
license-file: LICENSE

author: Juspay Technologies
maintainer: opensource@juspay.in
extra-source-files: CHANGELOG.md

homepage: https://github.com/juspay/fencer
bug-reports: https://github.com/juspay/fencer/issues

source-repository head
  type: git
  location: git://github.com/juspay/fencer.git

common common
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    ScopedTypeVariables
    LambdaCase
    DeriveGeneric
    DerivingStrategies
    NamedFieldPuns
    ViewPatterns
    TypeOperators
    MultiWayIf
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import:
    common
  exposed-modules:
    Fencer.Main
    Fencer.AppState
    Fencer.Server
    Fencer.Counter
    Fencer.Rules
    Fencer.Watch
    Fencer.Types
    Fencer.Proto
    Fencer.Time
    Fencer.Settings
  build-depends:
    base,
    base-prelude,
    extra,
    hashable,
    monad-loops,
    time,
    stm,
    vector,
    text,
    containers,
    unordered-containers,
    bytestring,
    transformers,
    deepseq,
    proto3-wire,
    proto3-suite,
    grpc-haskell,
    stm-containers,
    list-t,
    focus,
    named,
    aeson,
    yaml,
    directory,
    filepath,
    fsnotify,
    tinylog
  hs-source-dirs:
    lib

executable fencer
  import:
    common
  main-is:
    Main.hs
  build-depends:
    base,
    fencer
  hs-source-dirs:
    src
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite test-fencer
  import:
    common
  type:
    exitcode-stdio-1.0
  main-is:
    Tests.hs
  hs-source-dirs:
    test
  other-modules:
    Fencer.Types.Test
    Fencer.Rules.Test
    Fencer.Server.Test
  default-language:
    Haskell2010
  build-depends:
    , aeson
    , aeson-qq
    , base
    , base-prelude
    , directory
    , grpc-haskell
    , filepath
    , neat-interpolation
    , proto3-wire
    , proto3-suite
    , tasty
    , tasty-discover
    , tasty-hunit
    , temporary
    , text
    , tinylog
    , unordered-containers
    , vector
    -- Internal dependencies
    , fencer
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
